# three_body_problem

./: CMakeLists.txt  README.md
include/glad/: glad.h
shaders/: fragment.glsl  line.frag  line.vert  vertex.glsl
src/: glad.c  main.cpp  threeBodyPhysics.cpp  threeBodyPhysics.h
